corrected button spacing

--- a/style.css
+++ b/style.css
@@ -18,3 +18,7 @@ body {
   display: block;
     
 }
+.btn.btn-sm{
+  margin: 7px;
+  margin-left: -15px;
+}
